{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 664,
  "lineage": "8fb2d424-0f0f-5373-bc9b-58273d132900",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:security-group/sg-0b0a8372eb13058f5",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b0a8372eb13058f5",
            "ingress": [],
            "name": "req-counter-cluster-2025030417122309200000000c",
            "name_prefix": "req-counter-cluster-",
            "owner_id": "253490788963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "req-counter-cluster"
            },
            "tags_all": {
              "Name": "req-counter-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:security-group/sg-0b2d476fa18f18eab",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0b2d476fa18f18eab",
            "ingress": [],
            "name": "req-counter-node-20250304171223095200000010",
            "name_prefix": "req-counter-node-",
            "owner_id": "253490788963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "req-counter-node",
              "kubernetes.io/cluster/req-counter": "owned"
            },
            "tags_all": {
              "Name": "req-counter-node",
              "kubernetes.io/cluster/req-counter": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1865214686",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b0a8372eb13058f5",
            "security_group_rule_id": "sgr-085361369c91e5edc",
            "self": false,
            "source_security_group_id": "sg-0b2d476fa18f18eab",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-462718690",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-06224e919f80d8c8f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2368076247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-0c27962ef9d7b9aed",
            "self": false,
            "source_security_group_id": "sg-0b0a8372eb13058f5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1493535865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-0001ec92d343b61c3",
            "self": false,
            "source_security_group_id": "sg-0b0a8372eb13058f5",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2420632559",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-0357bb438788e0880",
            "self": false,
            "source_security_group_id": "sg-0b0a8372eb13058f5",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2199640014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-05a0cef0288f12089",
            "self": false,
            "source_security_group_id": "sg-0b0a8372eb13058f5",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3887784965",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-09e8952cc676c59c4",
            "self": false,
            "source_security_group_id": "sg-0b0a8372eb13058f5",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4069038851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-0fbb29aa83252ed4d",
            "self": false,
            "source_security_group_id": "sg-0b0a8372eb13058f5",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2913616169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-09385b637712989b6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1492283816",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-03a9f59172a5a33d8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4239249991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b2d476fa18f18eab",
            "security_group_rule_id": "sgr-0f229e33463d7b974",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f00d4a686824e22b",
            "arn": "arn:aws:ec2:eu-central-1:253490788963:elastic-ip/eipalloc-0f00d4a686824e22b",
            "domain": "vpc",
            "id": "eipalloc-0f00d4a686824e22b",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-77-189-220.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.189.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "test-nat-euc1a",
              "kubernetes.io/cluster/req-counter": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "test-nat-euc1a",
              "kubernetes.io/cluster/req-counter": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0928febee82d085b2",
            "arn": "arn:aws:ec2:eu-central-1:253490788963:elastic-ip/eipalloc-0928febee82d085b2",
            "domain": "vpc",
            "id": "eipalloc-0928febee82d085b2",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-58-227-80.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.58.227.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "test-nat-euc1b",
              "kubernetes.io/cluster/req-counter": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "test-nat-euc1b",
              "kubernetes.io/cluster/req-counter": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f00d4a686824e22b",
            "association_id": "eipassoc-0004d17d8ab0a30fa",
            "connectivity_type": "public",
            "id": "nat-0a1e38a96784b7ea5",
            "network_interface_id": "eni-03273dc85c36f4b1d",
            "private_ip": "10.0.103.183",
            "public_ip": "3.77.189.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-032d35f09dcdda2bf",
            "tags": {
              "Attributes": "nat",
              "Name": "test-nat-euc1a",
              "kubernetes.io/cluster/req-counter": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "test-nat-euc1a",
              "kubernetes.io/cluster/req-counter": "shared"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0928febee82d085b2",
            "association_id": "eipassoc-0264aeb1be11a5cb2",
            "connectivity_type": "public",
            "id": "nat-0419bcb7ee2c41f51",
            "network_interface_id": "eni-034ea0d0199e6866c",
            "private_ip": "10.0.129.217",
            "public_ip": "52.58.227.80",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03ab87939601e1444",
            "tags": {
              "Attributes": "nat",
              "Name": "test-nat-euc1b",
              "kubernetes.io/cluster/req-counter": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "test-nat-euc1b",
              "kubernetes.io/cluster/req-counter": "shared"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:network-acl/acl-0e74c331decdbc56d",
            "egress": [],
            "id": "acl-0e74c331decdbc56d",
            "ingress": [],
            "owner_id": "253490788963",
            "subnet_ids": [
              "subnet-04191e09857a31ac5",
              "subnet-07cde99a81d39958a"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "test-private",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "test-private",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:network-acl/acl-09c49cfa3daeb732d",
            "egress": [],
            "id": "acl-09c49cfa3daeb732d",
            "ingress": [],
            "owner_id": "253490788963",
            "subnet_ids": [
              "subnet-032d35f09dcdda2bf",
              "subnet-03ab87939601e1444"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "test-public",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "test-public",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2018607094",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e74c331decdbc56d",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-259573195",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e74c331decdbc56d",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-502594413",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09c49cfa3daeb732d",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1757424259",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09c49cfa3daeb732d",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08be2fdf9630645981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a1e38a96784b7ea5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08be2fdf963064598",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-088a92889879754c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0419bcb7ee2c41f51",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088a92889879754c3",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02bbc437cf6b5d67c",
            "id": "r-rtb-0c007a6152cd99cb51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c007a6152cd99cb5",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:route-table/rtb-08be2fdf963064598",
            "id": "rtb-08be2fdf963064598",
            "owner_id": "253490788963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "test-private-euc1a",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "test-private-euc1a",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:route-table/rtb-088a92889879754c3",
            "id": "rtb-088a92889879754c3",
            "owner_id": "253490788963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "test-private-euc1b",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "test-private-euc1b",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:route-table/rtb-0c007a6152cd99cb5",
            "id": "rtb-0c007a6152cd99cb5",
            "owner_id": "253490788963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "test-public",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "test-public",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c612ad58a994dd9",
            "route_table_id": "rtb-08be2fdf963064598",
            "subnet_id": "subnet-04191e09857a31ac5"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df40e5fc7ccd94ab",
            "route_table_id": "rtb-088a92889879754c3",
            "subnet_id": "subnet-07cde99a81d39958a"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07be80396dfda00a0",
            "route_table_id": "rtb-0c007a6152cd99cb5",
            "subnet_id": "subnet-032d35f09dcdda2bf"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a1a7464bf8e6086",
            "route_table_id": "rtb-0c007a6152cd99cb5",
            "subnet_id": "subnet-03ab87939601e1444"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:subnet/subnet-04191e09857a31ac5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04191e09857a31ac5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490788963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "test-private-euc1a",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "test-private-euc1a",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:subnet/subnet-07cde99a81d39958a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cde99a81d39958a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490788963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "test-private-euc1b",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "test-private-euc1b",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:subnet/subnet-032d35f09dcdda2bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032d35f09dcdda2bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490788963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "test-public-euc1a",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "test-public-euc1a",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:subnet/subnet-03ab87939601e1444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ab87939601e1444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490788963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "test-public-euc1b",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "test-public-euc1b",
              "kubernetes.io/cluster/req-counter": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:security-group/sg-0979862c2b9a412bb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0979862c2b9a412bb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "253490788963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-default"
            },
            "tags_all": {
              "Name": "test-default"
            },
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:internet-gateway/igw-02bbc437cf6b5d67c",
            "id": "igw-02bbc437cf6b5d67c",
            "owner_id": "253490788963",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            },
            "vpc_id": "vpc-06ba960350cc89eae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490788963:vpc/vpc-06ba960350cc89eae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01103d938e44665aa",
            "default_route_table_id": "rtb-048fe011afd6c7f1a",
            "default_security_group_id": "sg-0979862c2b9a412bb",
            "dhcp_options_id": "dopt-01df9a84c62b4a223",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ba960350cc89eae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048fe011afd6c7f1a",
            "owner_id": "253490788963",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}